# rose

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bindings.js  bindings.sh  example.rose  fetch.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: diff.sh  wbg.sh
.github/workflows/: build.yml  release.yml
crates/autodiff/: Cargo.toml
crates/autodiff/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: build.rs  id.rs  interp.rs  lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  lexer.rs  lib.rs  parser.lalrpop  tokens.rs  translate.rs
crates/frontend/tests/: add.rose  interp.rs  mul.rose  sub.rose
crates/interp/: Cargo.toml
crates/interp/src/: lib.rs
crates/transpose/: Cargo.toml
crates/transpose/src/: lib.rs
crates/validate/: Cargo.toml
crates/validate/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  pprint.rs
site/: index.html
