[package]
name = "rose"
version = "0.0.0"
edition = "2021"
description = "Extensible interactive autodiff."
license = "MIT"
include = ["src/lib.rs"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[dev-dependencies]
ts-rs = "6"

[features]
serde = ["dep:serde"]
