[package]
name = "rose-frontend"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
enumset = "1"
lalrpop-util = "0.19"
logos = "0.13"
rose = { path = "../core" }
thiserror = "1"

[build-dependencies]
lalrpop = { version = "0.19", default-features = false }

[dev-dependencies]
rose-interp = { path = "../interp" }
