[package]
name = "rose-frontend"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
enumset = "1"
indexmap = "2"
lalrpop-util = "0.19"
logos = "0.13"
rose = { path = "../core" }
rose-interp = { path = "../interp" }
thiserror = "1"

[build-dependencies]
lalrpop = { version = "0.19", default-features = false }

[dev-dependencies]
rose-interp = { path = "../interp" }
