[package]
name = "rose-interp"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
indexmap = "2"
rose = { path = "../core" }
serde = { version = "1", features = ["derive", "rc"], optional = true }
thiserror = "1"

[dev-dependencies]
ts-rs = "6"

[features]
default = ["serde"]
serde = ["dep:serde"]
