[package]
name = "rose-interp"
version = "0.4.0"
publish = false
edition = "2021"

[dependencies]
enumset = "1"
indexmap = "2"
rose = { path = "../core" }
serde = { version = "1", features = ["derive", "rc"], optional = true }
thiserror = "1"

[dev-dependencies]
ts-rs = "6"

[features]
default = ["serde"]
serde = ["dep:serde"]
