[package]
name = "rose-web"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
rose = { path = "../core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
ts-rs = "6"
wasm-bindgen = "0.2.84"
