[package]
name = "rose-web"
version = "0.3.2"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
enumset = "1"
indexmap = "2"
js-sys = "0.3"
rose = { path = "../core" }
rose-autodiff = { path = "../autodiff" }
rose-interp = { path = "../interp", features = ["serde"] }
rose-transpose = { path = "../transpose" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "=0.2.87" # Must be this version of wbg

[features]
default = ["debug"]
debug = ["dep:console_error_panic_hook"]
