[package]
name = "rose-web"
version = "0.4.6"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
by_address = "1"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }
enumset = "1"
indexmap = "2"
js-sys = "0.3"
rose = { path = "../core" }
rose-autodiff = { path = "../autodiff" }
rose-interp = { path = "../interp", features = ["serde"] }
rose-transpose = { path = "../transpose" }
rose-wasm = { path = "../wasm" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "=0.2.87" # Must be this version of wbg

[features]
default = ["debug"]
debug = ["dep:console_error_panic_hook", "dep:console_log"]
